[code] added shuffle logic in scheduler
